# roastr

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  justfile.fedimint.just
.config/flakebox/: id
.github/workflows/: ci-nix.yml
docs/: rustdoc-index.md
fedimint-cli/: Cargo.toml
fedimint-cli/src/: main.rs
fedimint-dummy-client/: Cargo.toml
fedimint-dummy-client/src/: lib.rs
fedimint-dummy-common/: Cargo.toml
fedimint-dummy-server/: Cargo.toml
fedimint-dummy-server/src/: lib.rs
fedimint-dummy-tests/: Cargo.toml
fedimint-starter-client/: Cargo.toml
fedimint-starter-client/src/: api.rs  lib.rs
fedimint-starter-common/: Cargo.toml
fedimint-starter-common/src/: config.rs  db.rs  lib.rs
fedimint-starter-server/: Cargo.toml
fedimint-starter-server/src/: lib.rs
fedimintd/: Cargo.toml
fedimintd/src/: distributedgen.rs  fedimintd.rs  main.rs
misc/: mprocs.yaml
misc/git-hooks/: pre-commit
nix/: flakebox.nix
nix/nix/: flakebox.nix
nostr-client/: Cargo.toml
nostr-client/src/: api.rs  lib.rs
nostr-common/: Cargo.toml
nostr-common/src/: config.rs  lib.rs
nostr-server/: Cargo.toml
nostr-server/src/: db.rs  lib.rs
nostr-tests/: Cargo.toml
roastr-client/: Cargo.toml
roastr-client/src/: cli.rs  commands.rs  db.rs  lib.rs
roastr-common/: Cargo.toml
roastr-common/src/: config.rs  endpoint_constants.rs  lib.rs
roastr-server/: Cargo.toml
roastr-server/src/: db.rs  lib.rs
roastr-tests/: Cargo.toml
roastr-tests/tests/: tests.rs
scripts/: _common.sh  aliases.sh  test.sh
scripts/dev/: build-docs.sh
scripts/dev/mprocs/: run.sh
scripts/tests/: roastr-tests.sh  starter-test.sh
tests/: Cargo.toml
tests/tests/: tests.rs
