[workspace]
members = [
    "fedimintd",
    "fedimint-cli",
    "roastr-common",
    "roastr-client",
    "roastr-server",
    "roastr-tests",
]
resolver = "2"

[workspace.package]
name = "roastr"
version = "0.0.1"

[workspace.metadata]
authors = ["The Fedimint Developers"]
edition = "2021"
description = "Fedimint compiled with custom module set"
documentation = "https://github.com/fedimint/fedimint-custom-modules-example"
readme = "README.md"
homepage = "https://github.com/fedimint/fedimint-custom-modules-example"
repository = "https://github.com/fedimint/fedimint-custom-modules-example"
license-file = "LICENSE"
keywords = ["bitcoin", "lightning", "chaumian", "e-cash", "federated"]

[workspace.dependencies]
fedimintd = { git = "https://github.com/m1sterc001guy/fedimint", rev = "2541b9705aefde724d55683aa46fb6997d312d7e" }
fedimint-cli = { git = "https://github.com/m1sterc001guy/fedimint", rev = "2541b9705aefde724d55683aa46fb6997d312d7e" }
fedimint-core = { git = "https://github.com/m1sterc001guy/fedimint", rev = "2541b9705aefde724d55683aa46fb6997d312d7e" }
fedimint-server = { git = "https://github.com/m1sterc001guy/fedimint", rev = "2541b9705aefde724d55683aa46fb6997d312d7e" }
fedimint-client = { git = "https://github.com/m1sterc001guy/fedimint", rev = "2541b9705aefde724d55683aa46fb6997d312d7e" }
fedimint-logging = { git = "https://github.com/m1sterc001guy/fedimint", rev = "2541b9705aefde724d55683aa46fb6997d312d7e" }
fedimint-testing = { git = "https://github.com/m1sterc001guy/fedimint", rev = "2541b9705aefde724d55683aa46fb6997d312d7e" }
devimint = { git = "https://github.com/m1sterc001guy/fedimint", rev = "2541b9705aefde724d55683aa46fb6997d312d7e" }
aead = { git = "https://github.com/m1sterc001guy/fedimint", rev = "2541b9705aefde724d55683aa46fb6997d312d7e" }
tbs = { git = "https://github.com/m1sterc001guy/fedimint", rev = "2541b9705aefde724d55683aa46fb6997d312d7e" }
threshold_crypto = { git = "https://github.com/fedimint/threshold_crypto", package = "fedimint-threshold-crypto", version = "0.2.1" }

clap = { version = "4.5.4", features = ["derive", "std", "help", "usage", "error-context", "suggestions", "env"], default-features = false }
nostr-sdk = "0.30.0"
bitcoin = "0.29.2"

# Comment above lines and uncomment these to work with local fedimint dependencies
#fedimintd = { path = "../fedimint/fedimintd" }
#fedimint-cli = { path = "../fedimint/fedimint-cli" }
#fedimint-core = { path = "../fedimint/fedimint-core" }
#fedimint-server = { path = "../fedimint/fedimint-server" }
#fedimint-client = { path = "../fedimint/fedimint-client" }
#fedimint-logging = { path = "../fedimint/fedimint-logging" }
#fedimint-testing = { path = "../fedimint/fedimint-testing" }
#devimint = { path = "../fedimint/devimint" }
#aead = { path = "../fedimint/aead" }
#tbs = { path = "../fedimint/tbs" }

[profile.dev]
split-debuginfo = "packed"

# in dev mode optimize crates that are perf-critical (usually just crypto crates)
[profile.dev.package]
secp256k1 = { opt-level = 3 }
secp256k1-zkp = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
secp256k1-zkp-sys = { opt-level = 3 }
bitcoin_hashes = { opt-level = 3 }
ff = { opt-level = 3 }
group = { opt-level = 3 }
pairing = { opt-level = 3 }
rand_core = { opt-level = 3 }
byteorder = { opt-level = 3 }
zeroize = { opt-level = 3 }
bls12_381 = { opt-level = 3 }
subtle = { opt-level = 3 }
ring = { opt-level = 3 }
threshold_crypto = { opt-level = 3 }
