[workspace]
members = [
    "fedimintd",
    "fedimint-cli",
    "roastr-common",
    "roastr-client",
    "roastr-server",
    "roastr-tests",
]
resolver = "2"

[workspace.package]
version = "0.0.1"

[workspace.metadata]
name = "roastr"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "Fedimint compiled with custom module set"
documentation = "https://github.com/fedimint/fedimint-custom-modules-example"
readme = "README.md"
homepage = "https://github.com/fedimint/fedimint-custom-modules-example"
repository = "https://github.com/fedimint/fedimint-custom-modules-example"
license-file = "LICENSE"
keywords = ["bitcoin", "lightning", "chaumian", "e-cash", "federated"]

[workspace.dependencies]
fedimintd = "0.5.0"
fedimint-api-client = "0.5.0"
fedimint-cli = "0.5.0"
fedimint-core = "0.5.0"
fedimint-server = "0.5.0"
fedimint-client = "0.5.0"
fedimint-logging = "0.5.0"
fedimint-testing = "0.5.0"
devimint = "0.5.0"
aead = "0.5.0"
tbs = "0.5.0"

bitcoin = { version = "0.32.5", features = ["serde"] }
anyhow = "1.0.66"
clap = { version = "4.5.4", features = [
    "derive",
    "std",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "env",
], default-features = false }
nostr-sdk = "0.38.0"
schnorr_fun = { version = "0.10.0", features = ["serde", "bincode"] }
tracing = "0.1.37"
rand = "0.8.5"
sha2 = "0.10"
tikv-jemallocator = "0.5"

# Comment above lines and uncomment these to work with local fedimint dependencies
#fedimintd = { path = "../fedimint/fedimintd" }
#fedimint-cli = { path = "../fedimint/fedimint-cli" }
#fedimint-core = { path = "../fedimint/fedimint-core" }
#fedimint-server = { path = "../fedimint/fedimint-server" }
#fedimint-client = { path = "../fedimint/fedimint-client" }
#fedimint-logging = { path = "../fedimint/fedimint-logging" }
#fedimint-testing = { path = "../fedimint/fedimint-testing" }
#devimint = { path = "../fedimint/devimint" }
#aead = { path = "../fedimint/aead" }
#tbs = { path = "../fedimint/tbs" }

[profile.dev]
split-debuginfo = "packed"

# in dev mode optimize crates that are perf-critical (usually just crypto crates)
[profile.dev.package]
secp256k1 = { opt-level = 3 }
secp256k1-zkp = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
secp256k1-zkp-sys = { opt-level = 3 }
bitcoin_hashes = { opt-level = 3 }
ff = { opt-level = 3 }
group = { opt-level = 3 }
tikv-jemalloc-sys = { opt-level = 3 }
pairing = { opt-level = 3 }
rand_core = { opt-level = 3 }
byteorder = { opt-level = 3 }
zeroize = { opt-level = 3 }
bls12_381 = { opt-level = 3 }
subtle = { opt-level = 3 }
ring = { opt-level = 3 }

[profile.ci]
inherits = "dev"
debug = "line-tables-only"
incremental = false

[profile.release]
debug = "line-tables-only"
