[package]
name = "roastr-cli"
version = "0.0.1"
authors = ["m1sterc001guy"]
edition = "2021"
description = "fedimint-cli with custom module set"

[[bin]]
name = "fedimint-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
fedimint-cli = { workspace = true }
roastr-client = { path = "../roastr-client" }
tokio = { version = "1.25.0", features = ["full", "tracing"] }
