[package]
name = "roastr-cli"
version = "0.0.1"
authors = ["m1sterc001guy"]
edition = "2021"
description = "fedimint-cli with custom module set"

[[bin]]
name = "fedimint-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
fedimint-cli = { workspace = true }
fedimint-core = { workspace = true }
roastr-client = { path = "../roastr-client", features = [ "cli" ] }
tokio = { version = "1.25.0", features = ["full", "tracing"] }

[build-dependencies]
fedimint-build = { git = "https://github.com/fedimint/fedimint" }
