[package]
name = "fedimint-dummy-client"
version = "0.1.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-dummy is a dummy example fedimint module."
license = "MIT"

[lib]
name = "fedimint_dummy_client"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
anyhow = "1.0.66"
fedimint-dummy-common ={ path = "../fedimint-dummy-common" }
fedimint-client = { workspace = true }
fedimint-core ={ workspace = true }
futures = "0.3"
rand = "0.8.5"
secp256k1 = "0.24.2"
serde = {version = "1.0.149", features = [ "derive" ] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
tracing = "0.1.37"
thiserror = "1.0.39"
threshold_crypto = { workspace = true }
