[package]
name = "fedimint-dummy-server"
version = "0.2.1"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-dummy is a dummy example fedimint module."
license = "MIT"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "fedimint_dummy_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.73"
bitcoin_hashes = "0.11.0"
erased-serde = "0.3"
futures = "0.3"
fedimint-core = { workspace = true }
fedimint-dummy-common = { path = "../fedimint-dummy-common" }
rand = "0.8"
serde = { version = "1.0.149", features = [ "derive" ] }
secp256k1 = "0.24.2"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.39"
#fedimint-server = { workspace = true }
tracing = "0.1.37"
tokio = { version = "1.26.0", features = ["sync"] }
