[package]
name = "fedimint-starter-server"
version = "0.1.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-starter is a starter example fedimint module."
license = "MIT"

[lib]
name = "fedimint_starter_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1"
bitcoin_hashes = "0.11.0"
erased-serde = "0.3"
futures = "0.3"
fedimint-core = { workspace = true }
fedimint-starter-common = { path = "../fedimint-starter-common" }
rand = "0.8"
serde = { version = "1.0.149", features = [ "derive" ] }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.9"
tracing = "0.1.37"
