[package]
name = "fedimintd-nostr"
version = "0.0.1"
authors = ["m1sterc001guy"]
edition = "2021"
description = "fedimintd with a nostr module"

[[bin]]
name = "fedimintd"
path = "src/fedimintd.rs"

[dependencies]
anyhow = "1.0.66"
fedimintd = { workspace = true }
tokio = { version = "1.25.0", features = ["full", "tracing"] }
nostr-server = { path = "../nostr-server" }
nostr-common = { path = "../nostr-common" }
rand = "0.8"
schnorr_fun = { version = "0.10.0", features = ["serde", "bincode"] }
sha2 = "0.10"
