[package]
name = "nostr-client"
version = "0.0.1"
authors = ["m1sterc001guy"]
edition = "2021"
description = "A federated nostr client."
license = "MIT"

[lib]
name = "nostr_client"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.73"
anyhow = "1.0.66"
nostr-common ={ path = "../nostr-common" }
fedimint-client = { workspace = true }
fedimint-core ={ workspace = true }
futures = "0.3"
erased-serde = "0.3"
rand = "0.8.5"
secp256k1 = "0.24.2"
serde = {version = "1.0.149", features = [ "derive" ] }
strum = "0.24"
strum_macros = "0.24"
tracing = "0.1.37"
thiserror = "1.0.39"
threshold_crypto = { workspace = true }
