[package]
name = "nostr-common"
version = "0.0.1"
authors = ["m1sterc001guy"]
edition = "2021"
description = "A federated nostr client."
license = "MIT"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "nostr_common"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.73"
bitcoin_hashes = "0.11.0"
erased-serde = "0.3"
futures = "0.3"
fedimint-core ={ workspace = true }
rand = "0.8"
serde = { version = "1.0.149", features = [ "derive" ] }
secp256k1 = "0.24.2"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.39"
tracing = "0.1.37"
threshold_crypto = { workspace = true }
