[package]
name = "nostr-common"
version = "0.0.1"
authors = ["m1sterc001guy"]
edition = "2021"
description = "A federated nostr client."
license = "MIT"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "nostr_common"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.73"
bincode = "1.3.1"
fedimint-core ={ workspace = true }
serde = { version = "1.0.149", features = ["derive"] }
schnorr_fun = { version = "0.9.1", features = ["serde"]}
thiserror = "1.0.39"
