[package]
name = "nostr-tests"
version = "0.0.1"
authors = ["m1sterc001guy"]
edition = "2021"
description = "A federated nostr client."
license = "MIT"
publish = false

[[test]]
name = "nostr_tests"
path = "tests/tests.rs"

[dependencies]
anyhow = "1.0.66"
fedimint-client = { workspace = true }
fedimint-core = { workspace = true }
nostr-client = { path = "../nostr-client" }
nostr-common = { path = "../nostr-common" }
nostr-server = { path = "../nostr-server" }
fedimint-logging = { workspace = true }
fedimint-server = { workspace = true }
fedimint-testing = { workspace = true }
rand = "0.8"
secp256k1 = "0.24.2"
tokio = { version = "1.26.0", features = ["sync"] }
tracing = "0.1.37"

[dev-dependencies]
threshold_crypto = { workspace = true }
