[package]
name = "roastr-client"
version = "0.0.1"
authors = ["m1sterc001guy"]
edition = "2021"
description = "A federated nostr client."
license = "MIT"

[lib]
name = "roastr_client"
path = "src/lib.rs"

[features]
default =[]
cli = ["dep:clap"]

[dependencies]
async-trait = "0.1.73"
anyhow = { workspace = true }
bitcoin = { workspace = true }
clap = { workspace = true, optional = true }
roastr-common ={ path = "../roastr-common" }
fedimint-api-client = { workspace = true }
fedimint-client = { workspace = true }
fedimint-core ={ workspace = true }
#fedimint-wallet-client = { git = "https://github.com/m1sterc001guy/fedimint", rev = "2541b9705aefde724d55683aa46fb6997d312d7e" }
fedimint-wallet-client = "0.4.3"
futures = "0.3"
erased-serde = "0.4.4"
nostr-sdk = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
secp256k1 = "0.29.0"
schnorr_fun = { workspace = true }
serde = {version = "1.0.149", features = [ "derive" ] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
strum = "0.26.2"
strum_macros = "0.26.2"
tracing = { workspace = true }
thiserror = "1.0.39"