[package]
name = "roastr-common"
version = "0.0.1"
authors = ["m1sterc001guy"]
edition = "2021"
description = "A federated nostr client."
license = "MIT"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "roastr_common"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.73"
bincode2 = "2.0.1"
fedimint-core ={ workspace = true }
nostr-sdk = "0.24.0"
rand = "0.8"
sha2 = "0.10"
serde = { version = "1.0.149", features = ["derive"] }
schnorr_fun = { version = "0.10.0", features = ["serde"]}
thiserror = "1.0.39"
tracing = "0.1.37"
