[package]
name = "roastr-common"
version = "0.0.1"
authors = ["m1sterc001guy"]
edition = "2021"
description = "A federated nostr client."
license = "MIT"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "roastr_common"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.73"
bincode2 = "2.0.1"
fedimint-core ={ workspace = true }
nostr-sdk = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
serde = { version = "1.0.149", features = ["derive"] }
schnorr_fun = { workspace = true }
thiserror = "1.0.39"
tracing = { workspace = true }
