[package]
name = "roastr-server"
version = "0.2.1"
authors = ["m1sterc001guy"]
edition = "2021"
description = "A federated nostr client."
license = "MIT"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "roastr_server"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.73"
anyhow = "1.0.66"
fedimint-core = { workspace = true }
fedimint-server = { workspace = true }
futures = "0.3.28"
itertools = "0.10.0"
erased-serde = "0.3"
nostr-sdk = "0.24.0"
rand = "0.8"
roastr-common = { path = "../roastr-common" }
schnorr_fun = { version = "0.10.0", features = [ "serde", "bincode" ]}
sha2 = "0.10"
serde = { version = "1.0.149", features = [ "derive" ] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
strum = "0.24"
strum_macros = "0.24"
tracing = "0.1.37"
