[package]
name = "roastr-server"
version = "0.2.1"
authors = ["m1sterc001guy"]
edition = "2021"
description = "A federated nostr client."
license = "MIT"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "roastr_server"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
fedimint-core = { workspace = true }
fedimint-server = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
erased-serde = { workspace = true }
nostr-sdk = { workspace = true }
rand = { workspace = true }
roastr-common = { path = "../roastr-common" }
schnorr_fun = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
