[package]
name = "roastr-tests"
version = "0.0.1"
authors = ["m1sterc001guy"]
edition = "2021"
description = "A federated nostr client."
license = "MIT"
publish = false

[[test]]
name = "roastr_tests"
path = "tests/tests.rs"

[dependencies]
fedimint-dummy-client = "0.5.0"
fedimint-dummy-common = "0.5.0"
fedimint-dummy-server = "0.5.0"
fedimint-wallet-client = "0.5.0"
fedimint-wallet-common = "0.5.0"
fedimint-wallet-server = "0.5.0"

anyhow = { workspace = true }
bitcoin = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-client = { workspace = true }
fedimint-core = { workspace = true }
roastr-client = { path = "../roastr-client" }
roastr-common = { path = "../roastr-common" }
roastr-server = { path = "../roastr-server" }
fedimint-logging = { workspace = true }
fedimint-server = { workspace = true }
#fedimint-testing = { workspace = true }
nostr-sdk = { workspace = true }
rand = { workspace = true }
tokio = { version = "1.26.0", features = ["sync"] }
tracing = { workspace = true }
schnorr_fun = { workspace = true }
sha2 = { workspace = true }
