[package]
name = "roastr-tests"
version = "0.0.1"
authors = ["m1sterc001guy"]
edition = "2021"
description = "A federated nostr client."
license = "MIT"
publish = false

[[test]]
name = "roastr_tests"
path = "tests/tests.rs"

[dependencies]
#anyhow = { workspace = true }
#devimint = { workspace = true }
#fedimint-client = { workspace = true }
#fedimint-core = { workspace = true }
#roastr-client = { path = "../roastr-client" }
#roastr-common = { path = "../roastr-common" }
#fedimint-logging = { workspace = true }
#tracing = { workspace = true }
#tokio = { workspace = true }
