[package]
name = "fedimint-starter-tests"
version = "0.2.1"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "tests for starter module"

[[test]]
name = "fedimint-custom-tests"
path = "tests/tests.rs"

[dependencies]
anyhow = "1.0.66"
devimint = { workspace = true }
fedimint-cli = { workspace = true }
fedimint-core = { workspace = true }
fedimint-logging = { workspace = true }
fedimint-dummy-client = { path = "../fedimint-dummy-client" }
tokio = { version = "1.25.0", features = ["full", "tracing"] }
tracing = "0.1.37"
